# hello_fdw

./: Cargo.toml  README.md  hello_fdw.control
sql/: lib.generated.sql
src/: lib.rs
