[package]
name = "hello_fdw"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
#pg10 = ["pgx/pg10", "pgx-tests/pg10" ]
#pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
#pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg15 = ["pgx/pg15", "pgx-tests/pg15" ]
pg_test = []

[dependencies]
pgx = "0.7.4"
pgx-macros = "0.7.4"
pgx-pg-sys = "0.7.4"

[dev-dependencies]
pgx-tests = "0.7.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
